# kiwi-contract

./: .gitignore  README.md  package.json
contract/src/: lib.rs
scripts/: chain_create_account.mjs  chain_deploy.mjs  chain_interact.mjs  config.mjs  contract_compile.mjs  contract_test.mjs  random_seed.mjs
src/: Cargo.toml
src/src/: lib.rs
